# sv-agent

./: .gitignore  .gitmodules  API_SETUP.md  AWLKIT_DEVELOPMENT.md  CLAUDE.md  Dockerfile  Dockerfile.ollama  GEMMA_SETUP.md  MANIFEST.in  README.md  README_TESTING.md  demo_awlkit.py  download_gemma.py  pyproject.toml  run-docker-chat-gpu.sh  run-docker-chat.sh  setup-jupyter.sh  setup.sh  setup_gemma.py  test_huggingface_only.py
docs/: AWLKIT_USAGE.md  CLI_REFERENCE.md  INSTALLATION.md  README.md  SEVEN_BRIDGES_EXECUTION.md  chat-examples.md  chat-interface.md  gatk-sv-pipeline-overview.md  huggingface-setup.md  testing.md
docs/cwl/: CONVERSION_SUMMARY.md  README.md  WDL_to_CWL_Mapping.md  ploidy_estimation_README.md  workflow_diagram.py
examples/: README.md  batch1.json  convert_gatksv_module.py  ollama_usage.py  sv_agent_chat_demo.ipynb  sv_agent_cwl_execution_demo.ipynb  sv_agent_demo.ipynb  test_gemma_chat.py  test_huggingface.py
notebooks/: sv_agent_demo.ipynb
src/sv_agent/: __init__.py  agent.py  chat.py  knowledge.py  main.py  nl_executor.py  notebook.py  sb_executor.py
src/sv_agent/cwl/ploidy_estimation/: RuntimeAttr.yml  test_inputs.yml  validate.sh
src/sv_agent/llm/: __init__.py  utils.py
src/sv_agent/prompts/: gatksv.txt  system_prompt.txt
submodules/: README.md
tests/: conftest.py  demo_refactored_agent.py  test_agent.py  test_gemma_setup.sh  test_llm_chat.py  test_parser.py  test_refactored_sv_agent.py
