[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-agent"
version = "0.1.0"
description = "An AWLKit-based agent for automating GATK-SV structural variant discovery pipeline"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    "awlkit>=0.1.0",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "requests>=2.25"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/sv-agent"
Documentation = "https://sv-agent.readthedocs.io"
Repository = "https://github.com/YOUR_USERNAME/sv-agent"
Issues = "https://github.com/YOUR_USERNAME/sv-agent/issues"

[project.scripts]
sv-agent = "sv_agent.main:main"

[tool.setuptools]
packages = ["sv_agent", "sv_agent.prompts"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"sv_agent.prompts" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sv_agent --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true