[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-agent"
version = "0.1.0"
description = "Convert GATK-SV WDL workflows to CWL and provide SV analysis expertise"
authors = [
    {name = "AWL Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "ruamel.yaml>=0.17",
    "lark>=1.1",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/agentic-workflow-library/sv-agent"
Repository = "https://github.com/agentic-workflow-library/sv-agent"
Documentation = "https://github.com/agentic-workflow-library/awl-handbook"

[project.scripts]
sv-agent = "sv_agent.main:main"

[tool.setuptools]
packages = ["sv_agent"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"sv_agent" = ["prompts/*.txt", "templates/*.cwl"]